--- a/Website/sites/kisiparosalapitasidokumentum.html
+++ b/Website/sites/kisiparosalapitasidokumentum.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1><u>Kisiparosi vállalkozás alapítása dokumentum</u></h1>
         <hr>
-        <form action="https://formsubmit.co/67ee22337a192d9fc6403d7dab744dc0" method="POST">
+        <form action="https://formsubmit.co/hegedusd@eszi.hu" method="POST">
 
 
 
